# gitchangelog

./: .buildinfo  .coveragerc  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGES.html  CHANGES.rst  HISTORY.rst  INSTALL.rst  MANIFEST.in  README.rst  REUSE.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme_include.html  requirements.txt  search.html  searchindex.js  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: ci.yml  coverage.yml  pylint.yml  release.yml  sphinx.yml
LICENSES/: BSD-3-Clause.txt
_modules/: index.html
_modules/gitchangelog/: gitchangelog.html
_sources/: CHANGES.rst.txt  index.rst.txt
_sources/api/: gitchangelog.gitchangelog.rst.txt  gitchangelog.rst.txt  modules.rst.txt
_sources/dev/: pre-commit-config.rst.txt  pre-commit-usage.rst.txt
_static/: documentation_options.js
api/: gitchangelog.gitchangelog.html  gitchangelog.html  modules.html
dev/: generate-changelog.html  pre-commit-config.html  pre-commit-usage.html
docs/source/: conf.py  index.rst
docs/source/dev/: generate-changelog.rst
src/gitchangelog/: __init__.py  gitchangelog.py  gitchangelog.rc.github.release  gitchangelog.rc.reference
