[metadata]
name = gitchangelog
version = attr: setuptools_scm.get_version
description = generate a changelog file from a local git checkout
url = http://github.com/sarnold/gitchangelog
author = Valentin Lab
author_email = valentin.lab@kalysto.org
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Version Control

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-resources; python_version < '3.10'
    Mako
    pystache

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
gitchangelog =
    gitchangelog.rc*

gitchangelog.templates.mako =
    *.tpl

gitchangelog.templates.mustache =
    *.tpl

[options.data_files]
bin = bin/get-rcpath

[options.entry_points]
console_scripts =
    gitchangelog = gitchangelog.gitchangelog:main

# test deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    minimock
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .github
    .gitattributes
    .gitignore

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    test

max-line-length = 110
max-complexity = 25
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    # too many leading '#' for block comment
    E266,
    # do not assign a lambda expression, use a def
    E731,
    # whitespace before ':'
    E203,
